2002-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 04.
	(gnus-version): T-gnus supports SEMI 1.14 and FLIM 1.14.

	* lisp/mmgnus.el: Remove commented obsolete definitions.

	* lisp/message.el (message-header-hook): Replace
	`eword-encode-header' with `mime-encode-header-in-buffer'.
	(message-send-mail-with-smtp): Don't use `smtp-via-smtp'.

2002-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/mm-url.el (mm-url-form-encode-xwfu): Use
	`file-coding-system' instead of `buffer-file-coding-system' when
	Mule 2 is running.

	* lisp/gnus-group.el: Require `mm-url' only when compiling.
	(gnus-group-fetch-charter): Require `mm-url'.

	* lisp/gnus.el (gnus-default-charset): Default to `iso-8859-1'.

2002-09-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/nnheader.el (toplevel) [XEmacs]: Remove code to define
	`emacs-mule' coding-system, because the generated coding system is
	not compatible to the original coding system of FSF Emacs.

2002-09-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/nnheader.el (toplevel) [XEmacs]: Define `emacs-mule' coding
	system in order to cancel difference on coding systems of
	auto-saved files between FSF Emacs and XEmacs.
	(nnheader-auto-save-coding-system) [Mule]: The default value of
	Mule2 is changed from `*junet*' to `*internal*', in order to unify
	coding system of files auto-saved by Mule2.

2002-09-08  Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-msg.el (gnus-configure-posting-styles): Follow the
	change of arglist of gnus-configure-posting-style.
	(gnus-configure-posting-style): Check circular import.

2002-09-08  Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 03.

	* lisp/gnus-msg.el (gnus-named-posting-styles): Defcustom.
	(gnus-posting-styles): Allow (import "...").
	(gnus-configure-posting-style): Splitted from
	gnus-configure-posting-styles.
	(gnus-summary-execute-command-with-posting-style): Fix prompt string.
